--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,27 @@ body {
 	letter-spacing: 0.03em;
 }
 /*** THE END BODY ***/
+.download-btn {
+	display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border: 2px solid #3498db;
+    color: #3498db;
+    background-color: #fff;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.download-btn:hover {
+	background-color: #3498db;
+    color: #fff;
+}
+
+
 
 /*** MEDIA ***/
 @media only screen and (max-width: 768px) {
